# cmake_opencv_fetchcontent

./: CMakeLists.txt  README.md  main.cpp
